--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <div class="container">
         <div class="date">
-            <span class="date-month">NOVEMBER</span> <span class="date-day">1st 2024</span>
+            <span class="date-month">November</span> <span class="date-day">1st 2024</span>
         </div>
         <img src="logo.png" alt="Logo" class="logo">
         <div class="slogan">The light will be revealed</div>
+        <div class="countdown" id="countdown-timer"></div> <!-- Timer goes here -->
     </div>
+
+    <script src="script.js"></script> <!-- Link to external JS file -->
 </body>
 </html>
