--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Page with Logo</title>
+	<meta name="description" content="Discover Light as One – a transformative experience centered around unity, illumination, and personal growth. Explore inspiring content, videos, and insights to align with the core concept of collective enlightenment. Join our journey today.">
+    <title>Light As One </title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
