--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <!-- Right Column with Carousel -->
            <div class="col-lg-3 d-flex flex-column justify-content-center align-items-center">
     <div class="carousel-container">
+	<div class="slogan">Follow the Light</div>
         <button id="scroll-up" class="btn btn-dark mb-2">⬆</button>
         <div class="carousel">
             <div class="carousel-window offuscated">
@@ -62,6 +63,7 @@
             </div>
         </div>
         <button id="scroll-down" class="btn btn-dark mt-2">⬇</button>
+		<div class="slogan">That unites us all</div>
     </div>
 </div>
         </div>
