--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <span id="minutes">00</span> min<span class="colon">:</span>
     <span id="seconds">00</span>
 </div><!-- Timer goes here -->     
-	 <div class="slogan">The light reveals</div>
+	 <div class="slogan"style="font-size: 32px;">The light reveals</div>
 		 <div class="date">
             <span class="date-month">November 1st 2024</span>
         </div>
@@ -63,7 +63,8 @@
             </div>
         </div>
         <button id="scroll-down" class="btn btn-dark mt-2">⬇</button>
-		<div class="slogan">That unites us all</div>
+		<div class="slogan">Follow the Light</div>
+		
     </div>
 </div>
         </div>
