--- a/settings.html
+++ b/settings.html
@@ -240,7 +240,64 @@ locationInput.addEventListener('input', () => {
   }, 400);
 });
 </script>
+<script>
+document.addEventListener('DOMContentLoaded', async () => {
+  const form = document.getElementById('settings-form');
+  const user = auth.currentUser;
 
+  // Wait for Firebase to confirm the auth state
+  auth.onAuthStateChanged(async user => {
+    if (!user) {
+      alert("You're not logged in.");
+      window.location.href = "index.html";
+      return;
+    }
+
+    const docRef = db.collection('users').doc(user.uid);
+    const doc = await docRef.get();
+
+    if (doc.exists) {
+      const data = doc.data();
+      document.getElementById('profile-first-name').value = data.firstName || '';
+      document.getElementById('profile-last-name').value = data.lastName || '';
+      document.getElementById('profile-email').value = data.email || '';
+      document.getElementById('profile-phone').value = data.phone || '';
+      document.getElementById('profile-location').value = data.location || '';
+    }
+  });
+
+  // Save form to Firestore
+  form.addEventListener('submit', async e => {
+    e.preventDefault();
+
+    const user = auth.currentUser;
+    if (!user) return alert("Not logged in.");
+
+    const profileData = {
+      firstName: document.getElementById('profile-first-name').value,
+      lastName: document.getElementById('profile-last-name').value,
+      email: document.getElementById('profile-email').value,
+      phone: document.getElementById('profile-phone').value,
+      location: document.getElementById('profile-location').value
+    };
+
+    try {
+      await db.collection('users').doc(user.uid).set(profileData, { merge: true });
+      alert("✅ Settings saved.");
+    } catch (err) {
+      console.error("❌ Error saving settings:", err);
+      alert("Failed to save settings.");
+    }
+  });
+
+  // Optional: logout
+  document.getElementById('settings-logout').addEventListener('click', () => {
+    auth.signOut().then(() => {
+      window.location.href = "index.html";
+    });
+  });
+});
+</script>
 
 </body>
 </html>
