--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <button type="button" id="settings-logout">Logout</button>
       <button type="button" id="settings-close">Close</button> 
     </form>
-	</DIV>
+	</div>
   <!-- BOTTOM NAVIGATION -->
   <nav class="bottom-nav hidden">
     <a href="#calendar">
