--- a/settings.html
+++ b/settings.html
@@ -116,188 +116,11 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
 
-<script>
-  // Your Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyA6C65XgjxpN1a7IowyRaJxr7poqsYV9TA",
-    authDomain: "malama-247ad.firebaseapp.com",
-    projectId: "malama-247ad",
-    storageBucket: "malama-247ad.firebasestorage.app",
-    messagingSenderId: "83778882351",
-    appId: "1:83778882351:web:599a8aebcc5ebd7b8eefda",
-    measurementId: "G-3NS9NX3HPZ"
-  };
+<!-- Firebase Init (single shared script) -->
+<script src="firebase-init.js"></script>
 
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
-  <!-- Inline Script to Wire the Popup -->
-  <script src="app.js"></script>
-  <script>
-    const moreBtn = document.getElementById('more-button-settings');
-    const moreMenu = document.getElementById('more-menu-settings');
-
-    moreBtn.addEventListener('click', e => {
-      e.preventDefault();
-      moreMenu.classList.toggle('hidden');
-    });
-
-    document.addEventListener('click', e => {
-      if (!moreMenu.contains(e.target) && !moreBtn.contains(e.target)) {
-        moreMenu.classList.add('hidden');
-      }
-    });
-
-    // Populate & Save Profile Data (reuse your existing logic)
-    const current = localStorage.getItem('currentUser');
-    const users   = JSON.parse(localStorage.getItem('users') || '{}');
-    if (current && users[current]) {
-      const p = users[current].profile;
-      document.getElementById('profile-first-name').value = p.firstName || '';
-      document.getElementById('profile-last-name').value  = p.lastName || '';
-      document.getElementById('profile-email').value      = p.email || '';
-      document.getElementById('profile-phone').value      = p.phone || '';
-      document.getElementById('profile-location').value   = p.location || '';
-	  document.getElementById('profile-lat').value = p.lat || '';
-		document.getElementById('profile-lng').value = p.lng || '';
-    }
-
-    document.getElementById('settings-form').addEventListener('submit', e => {
-      e.preventDefault();
-      const oldEmail = localStorage.getItem('currentUser');
-      const all      = JSON.parse(localStorage.getItem('users') || '{}');
-      const fn       = document.getElementById('profile-first-name').value.trim();
-      const ln       = document.getElementById('profile-last-name').value.trim();
-      const ne       = document.getElementById('profile-email').value.trim().toLowerCase();
-      const ph       = document.getElementById('profile-phone').value.trim();
-      const loc      = document.getElementById('profile-location').value.trim();
-	  const lat = document.getElementById('profile-lat').value.trim();
-const lng = document.getElementById('profile-lng').value.trim();
-      if (ne !== oldEmail && all[ne]) {
-        return alert('Email already in use');
-      }
-   const pw = document.getElementById('profile-password').value.trim();
-const rec = {
-  password: pw || all[oldEmail].password,
-  profile: {
-    firstName: fn,
-    lastName: ln,
-    email: ne,
-    phone: ph,
-    location: loc,
-    lat: lat,
-    lng: lng
-  }
-};
-
-      delete all[oldEmail];
-      all[ne] = rec;
-      localStorage.setItem('users', JSON.stringify(all));
-      localStorage.setItem('currentUser', ne);
-      alert('Settings saved');
-document.getElementById('profile-password').value = '';
-    });
-
-    document.getElementById('settings-logout').addEventListener('click', () => {
-      localStorage.removeItem('currentUser');
-      window.location.href = 'index.html';
-    });
-  </script>
-  <script>
-const locationInput = document.getElementById('profile-location');
-const suggestionBox = document.getElementById('location-suggestions');
-const latInput = document.getElementById('profile-lat');
-const lngInput = document.getElementById('profile-lng');
-const API_KEY = 'e4ba9531fa864ceaa8fdeab1d3da42c3'; // Replace this
-
-let debounceTimer;
-locationInput.addEventListener('input', () => {
-  clearTimeout(debounceTimer);
-  const query = locationInput.value.trim();
-  if (query.length < 3) return;
-
-  debounceTimer = setTimeout(() => {
-    fetch(`https://api.opencagedata.com/geocode/v1/json?q=${encodeURIComponent(query)}&key=${API_KEY}&limit=1`)
-      .then(res => res.json())
-      .then(data => {
-        if (data.results.length > 0) {
-          const result = data.results[0];
-          latInput.value = result.geometry.lat.toFixed(5);
-          lngInput.value = result.geometry.lng.toFixed(5);
-          suggestionBox.textContent = result.formatted;
-        } else {
-          latInput.value = '';
-          lngInput.value = '';
-          suggestionBox.textContent = 'No result found.';
-        }
-      })
-      .catch(err => {
-        console.error('Geocoding error:', err);
-        suggestionBox.textContent = 'Error retrieving location.';
-      });
-  }, 400);
-});
-</script>
-<script>
-document.addEventListener('DOMContentLoaded', async () => {
-  const form = document.getElementById('settings-form');
-  const user = auth.currentUser;
-
-  // Wait for Firebase to confirm the auth state
-  auth.onAuthStateChanged(async user => {
-    if (!user) {
-      alert("You're not logged in.");
-      window.location.href = "index.html";
-      return;
-    }
-
-    const docRef = db.collection('users').doc(user.uid);
-    const doc = await docRef.get();
-
-    if (doc.exists) {
-      const data = doc.data();
-      document.getElementById('profile-first-name').value = data.firstName || '';
-      document.getElementById('profile-last-name').value = data.lastName || '';
-      document.getElementById('profile-email').value = data.email || '';
-      document.getElementById('profile-phone').value = data.phone || '';
-      document.getElementById('profile-location').value = data.location || '';
-    }
-  });
-
-  // Save form to Firestore
-  form.addEventListener('submit', async e => {
-    e.preventDefault();
-
-    const user = auth.currentUser;
-    if (!user) return alert("Not logged in.");
-
-    const profileData = {
-      firstName: document.getElementById('profile-first-name').value,
-      lastName: document.getElementById('profile-last-name').value,
-      email: document.getElementById('profile-email').value,
-      phone: document.getElementById('profile-phone').value,
-      location: document.getElementById('profile-location').value
-    };
-
-    try {
-      await db.collection('users').doc(user.uid).set(profileData, { merge: true });
-      alert("✅ Settings saved.");
-    } catch (err) {
-      console.error("❌ Error saving settings:", err);
-      alert("Failed to save settings.");
-    }
-  });
-
-  // Optional: logout
-  document.getElementById('settings-logout').addEventListener('click', () => {
-    auth.signOut().then(() => {
-      window.location.href = "index.html";
-    });
-  });
-});
-</script>
+<!-- Main JS -->
+<script src="app.js"></script>
 
 </body>
 </html>
