--- a/settings.html
+++ b/settings.html
@@ -220,5 +220,6 @@ locationInput.addEventListener('input', () => {
         moreMenu.classList.add('hidden');
       }
     }); </script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.9.0/suncalc.min.js"></script>
 </body>
 </html>
