--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
   <div class="header-content">
     <div id="header-greeting">Aloha,</div>
     <h1>Mālama Mana</h1>
-    <div id="header-tide-info"></div>
-  </div>
+    <div id="header-tide-info">
+  <label>
+    <input type="checkbox" id="gpsToggle"> GPS Location
+  </label>
+  <div id="tide-location-note"></div>
+</div>
+
 </header>
 
   <!-- MAIN APP -->
