--- a/index.html
+++ b/index.html
@@ -34,13 +34,8 @@
   <div class="header-content">
     <div id="header-greeting">Aloha,</div>
     <h1>Mālama Mana</h1>
-    <div id="header-tide-info">
-  <label>
-    <input type="checkbox" id="gpsToggle"> GPS Location
-  </label>
-  <div id="tide-location-note"></div>
-</div>
-
+    <div id="header-tide-info"></div>
+  </div>
 </header>
 
   <!-- MAIN APP -->
