--- a/settings.html
+++ b/settings.html
@@ -59,6 +59,10 @@
   Longitude:<br>
   <input type="text" id="profile-lng" placeholder="Longitude" readonly>
 </label><br><br>
+	      <label>
+  <input type="checkbox" id="use-gps-checkbox">
+  Use GPS for tide location
+</label><br><br>
  </div> <div>
         <button type="submit">Save</button>
         <button type="button" id="settings-logout">Logout</button>
