--- a/settings.html
+++ b/settings.html
@@ -127,6 +127,24 @@
 <script src="app.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
+  // Always attach the GPS checkbox listener
+  const gpsCheckbox = document.getElementById('use-gps-checkbox');
+  gpsCheckbox.addEventListener('change', () => {
+    if (gpsCheckbox.checked && navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        pos => {
+          document.getElementById('profile-lat').value = pos.coords.latitude.toFixed(5);
+          document.getElementById('profile-lng').value = pos.coords.longitude.toFixed(5);
+          document.getElementById('location-suggestions').textContent = 'Using GPS coordinates.';
+        },
+        err => {
+          alert("Failed to get GPS location.");
+          gpsCheckbox.checked = false;
+        }
+      );
+    }
+  });
+
   auth.onAuthStateChanged(async user => {
     if (!user) {
       alert("You're not logged in.");
@@ -147,23 +165,6 @@ document.addEventListener('DOMContentLoaded', async () => {
       document.getElementById('use-gps-checkbox').checked = data.useGPS || false;
       localStorage.setItem('useGPS', data.useGPS ? 'true' : 'false');
     }
-	  const gpsCheckbox = document.getElementById('use-gps-checkbox');
-gpsCheckbox.addEventListener('change', () => {
-  if (gpsCheckbox.checked && navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(
-      pos => {
-        document.getElementById('profile-lat').value = pos.coords.latitude.toFixed(5);
-        document.getElementById('profile-lng').value = pos.coords.longitude.toFixed(5);
-        document.getElementById('location-suggestions').textContent = 'Using GPS coordinates.';
-      },
-      err => {
-        alert("Failed to get GPS location.");
-        gpsCheckbox.checked = false;
-      }
-    );
-  }
-});
-
   });
 
   document.getElementById('settings-form').addEventListener('submit', async e => {
@@ -197,6 +198,7 @@ gpsCheckbox.addEventListener('change', () => {
     auth.signOut().then(() => window.location.href = "index.html");
   });
 });
+
 </script>
 	<script>
 const locationInput = document.getElementById('profile-location');
