--- a/settings.html
+++ b/settings.html
@@ -63,11 +63,12 @@
   <input type="checkbox" id="use-gps-checkbox">
   Use GPS for tide location
 </label><br><br>
- </div> <div>
+	      <div>
         <button type="submit">Save</button>
         <button type="button" id="settings-logout">Logout</button>
       </form>
     </div>
+ </div> 
   </div>
 
   <!-- BOTTOM NAVIGATION -->
