--- a/index.html
+++ b/index.html
@@ -58,10 +58,16 @@
         <img id="moon-phase-image" src="" alt="Moon Phase" />
       </div>
       <div class="astro-times">
-	  <div><span class="icon">☀️</span> </div><div>Rise: <span id="sunrise-time">--:--</span></div>
-  <div>Set: <span id="sunset-time">--:--</span></div>
-  <div><span class="icon">🌙</span></div><div> Rise: <span id="moonrise-time">--:--</span></div>
-  <div>Set: <span id="moonset-time">--:--</span></div>
+      <div>
+        <span class="icon">☀️</span>
+        Rise: <span id="sunrise-time">--:--</span> /
+        Set: <span id="sunset-time">--:--</span>
+      </div>
+      <div>
+        <span class="icon">🌙</span>
+        Rise: <span id="moonrise-time">--:--</span> /
+        Set: <span id="moonset-time">--:--</span>
+      </div>
   
 </div>
     </div>
