--- a/index.html
+++ b/index.html
@@ -57,19 +57,7 @@
       <div class="moon-photo">
         <img id="moon-phase-image" src="" alt="Moon Phase" />
       </div>
-      <div class="astro-times">
-      <div>
-        <span class="icon">☀️</span>
-        Rise: <span id="sunrise-time">--:--</span> /
-        Set: <span id="sunset-time">--:--</span>
-      </div>
-      <div>
-        <span class="icon">🌙</span>
-        Rise: <span id="moonrise-time">--:--</span> /
-        Set: <span id="moonset-time">--:--</span>
-      </div>
-  
-</div>
+      
     </div>
   </div>
 
@@ -94,7 +82,11 @@
 </div>
 	  
 	  <div class="tide"> </div>
-	 
+	  <div class="astro-times">
+	  <div><span class="icon">☀️</span>Rise: <span id="sunrise-time">--:--</span> Set: <span id="sunset-time">--:--</span> <span>&nbsp;</span> <span>&nbsp;</span> <span>&nbsp;</span>
+  <span class="icon">🌙</span>Rise: <span id="moonrise-time">--:--</span> Set: <span id="moonset-time">--:--</span></div>
+  
+</div>
 		
       </div>
     </div>
