--- a/index.html
+++ b/index.html
@@ -83,10 +83,14 @@
 	  
 	  <div class="tide"> </div>
 	  <div class="astro-times">
-	  <div><span class="icon">☀️</span>Rise: <span id="sunrise-time">--:--</span> Set: <span id="sunset-time">--:--</span> <span>&nbsp;</span> <span>&nbsp;</span> <span>&nbsp;</span>
-  <span class="icon">🌙</span>Rise: <span id="moonrise-time">--:--</span> Set: <span id="moonset-time">--:--</span></div>
-  
+  <div class="sun-times">
+    <span class="icon">☀️</span>Rise: <span id="sunrise-time">--:--</span> Set: <span id="sunset-time">--:--</span>
+  </div>
+  <div class="moon-times">
+    <span class="icon">🌙</span>Rise: <span id="moonrise-time">--:--</span> Set: <span id="moonset-time">--:--</span>
+  </div>
 </div>
+
 		
       </div>
     </div>
