--- a/settings.html
+++ b/settings.html
@@ -40,7 +40,7 @@
 		<label>
   Password:<br>
   <input type="password" id="profile-password" placeholder="New password (leave blank to keep current)">
-</label><br><br>
+</label>
         <label>
           Phone:<br>
           <input type="tel" id="profile-phone">
