--- a/settings.html
+++ b/settings.html
@@ -21,8 +21,8 @@
 </header>
 
   <!-- SETTINGS CONTENT -->
-  <div class="app">
-    <div class="card">
+  <div class="app" style="display: flex; justify-content: flex-start;">
+  <div class="card" style="max-width: 600px;">
 	    <br><br>
       <h2>Settings</h2>
       <form id="settings-form">
