--- a/settings.html
+++ b/settings.html
@@ -21,8 +21,8 @@
 </header>
 
   <!-- SETTINGS CONTENT -->
-  <div class="app" style="display: flex; justify-content: flex-start;">
-  <div class="card" style="max-width: 600px;">
+  <div class="settings-container">
+  <div class="settings-card" id="settings-page">
 	    <br><br>
       <h2>Settings</h2>
       <form id="settings-form">
