--- a/settings.html
+++ b/settings.html
@@ -21,53 +21,53 @@
 </header>
 
   <!-- SETTINGS CONTENT -->
-  <div class="settings-container">
-  <div class="settings-card" id="settings-page">
-	    <br><br>
+  <div class="app">
+    <div class="card">
       <h2>Settings</h2>
       <form id="settings-form">
         <label>
           First Name:<br>
           <input type="text" id="profile-first-name" required>
-        </label>
+        </label><br><br>
         <label>
           Last Name:<br>
           <input type="text" id="profile-last-name" required>
-        </label>
+        </label><br><br>
         <label>
           Email:<br>
           <input type="email" id="profile-email" required>
-        </label>
+        </label><br><br>
 		<label>
   Password:<br>
   <input type="password" id="profile-password" placeholder="New password (leave blank to keep current)">
-</label>
+</label><br><br>
         <label>
           Phone:<br>
           <input type="tel" id="profile-phone">
-        </label>
+        </label><br><br>
         
 <label>
   Location:<br>
   <input type="text" id="profile-location" placeholder="City, Country" autocomplete="off">
   <div id="location-suggestions" style="font-size: 0.85rem; color: #555;"></div>
-</label>
+</label><br><br>
 <label>
   Latitude:<br>
   <input type="text" id="profile-lat" placeholder="Latitude" readonly>
-</label>
+</label><br><br>
 <label>
   Longitude:<br>
   <input type="text" id="profile-lng" placeholder="Longitude" readonly>
-</label>
+</label><br><br>
 	      <label>
   <input type="checkbox" id="use-gps-checkbox">
   Use GPS for tide location
-</label>
-	      <div class="form-buttons">
-  <button type="submit">Save</button>
-  <button type="button" id="settings-logout">Logout</button>
-</div>
+</label><br><br>
+	      <div>
+        <button type="submit">Save</button>
+        <button type="button" id="settings-logout">Logout</button>
+      </form>
+    </div>
  </div> 
   </div>
 
