--- a/settings.html
+++ b/settings.html
@@ -28,41 +28,41 @@
         <label>
           First Name:<br>
           <input type="text" id="profile-first-name" required>
-        </label><br><br>
+        </label>
         <label>
           Last Name:<br>
           <input type="text" id="profile-last-name" required>
-        </label><br><br>
+        </label>
         <label>
           Email:<br>
           <input type="email" id="profile-email" required>
-        </label><br><br>
+        </label>
 		<label>
   Password:<br>
   <input type="password" id="profile-password" placeholder="New password (leave blank to keep current)">
-</label><br><br>
+</label>
         <label>
           Phone:<br>
           <input type="tel" id="profile-phone">
-        </label><br><br>
+        </label>
         
 <label>
   Location:<br>
   <input type="text" id="profile-location" placeholder="City, Country" autocomplete="off">
   <div id="location-suggestions" style="font-size: 0.85rem; color: #555;"></div>
-</label><br><br>
+</label>
 <label>
   Latitude:<br>
   <input type="text" id="profile-lat" placeholder="Latitude" readonly>
-</label><br><br>
+</label>
 <label>
   Longitude:<br>
   <input type="text" id="profile-lng" placeholder="Longitude" readonly>
-</label><br><br>
+</label>
 	      <label>
   <input type="checkbox" id="use-gps-checkbox">
   Use GPS for tide location
-</label><br><br>
+</label>
 	      <div>
         <button type="submit">Save</button>
         <button type="button" id="settings-logout">Logout</button>
