--- a/settings.html
+++ b/settings.html
@@ -21,7 +21,7 @@
 </header>
 
   <!-- SETTINGS CONTENT -->
-  <div class="app settings-app">
+  <div class="app">
   <div class="card settings-card" id="settings-page">
       <h2>Settings</h2>
       <form id="settings-form">
