--- a/settings.html
+++ b/settings.html
@@ -22,7 +22,7 @@
 
   <!-- SETTINGS CONTENT -->
   <div class="app">
-  <div class="card settings-card" id="settings-page">
+  <div class="card" id="settings-page">
       <h2>Settings</h2>
       <form id="settings-form">
         <label>
