--- a/settings.html
+++ b/settings.html
@@ -21,7 +21,7 @@
 </header>
 
   <!-- SETTINGS CONTENT -->
-  <div class="app">
+ <div class="settings-wrapper">
   <div class="card" id="settings-page">
       <h2>Settings</h2>
       <form id="settings-form">
