--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
  
 	  <div class="card calendar-grid">
 		  <div class="calendar-month">
-  <button id="prev-month" class="month-nav">&lt;</button>
-  <span id="calendar-month-label"></span>
-  <button id="next-month" class="month-nav">&gt;</button>
-</div>
+    <button id="prev-day" class="day-nav">« Prev Day</button>
+    <button id="prev-month" class="month-nav">&lt;</button>
+    <span id="calendar-month-label"></span>
+    <button id="next-month" class="month-nav">&gt;</button>
+    <button id="next-day" class="day-nav">Next Day »</button>
+  </div>
 	    <table>
           <thead>
             <tr><th>S</th><th>M</th><th>T</th><th>W</th><th>T</th><th>F</th><th>S</th></tr>
