--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 </div>
  
 	  <div class="card calendar-grid">
-		  <div class="calendar-month">
-    <button id="prev-day" class="day-nav">« Prev Day</button>
-    <button id="prev-month" class="month-nav">&lt;</button>
-    <span id="calendar-month-label"></span>
-    <button id="next-month" class="month-nav">&gt;</button>
-    <button id="next-day" class="day-nav">Next Day »</button>
-  </div>
+		 <div class="calendar-month">
+  <button id="prev-day" class="inline-nav">«</button>
+  <button id="prev-month" class="inline-nav">&lt;</button>
+  <span id="calendar-month-label" class="calendar-label"></span>
+  <button id="next-month" class="inline-nav">&gt;</button>
+  <button id="next-day" class="inline-nav">»</button>
+</div>
 	    <table>
           <thead>
             <tr><th>S</th><th>M</th><th>T</th><th>W</th><th>T</th><th>F</th><th>S</th></tr>
