--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
 </div>
  
 	  <div class="card calendar-grid">
-		 <div class="calendar-month">
-  <button id="prev-day" class="inline-nav">«</button>
-  <button id="prev-month" class="inline-nav">&lt;</button>
-  <span id="calendar-month-label" class="calendar-label"></span>
-  <button id="next-month" class="inline-nav">&gt;</button>
-  <button id="next-day" class="inline-nav">»</button>
+		  <div class="calendar-month">
+  <button id="prev-month" class="month-nav">&lt;</button>
+  <span id="calendar-month-label"></span>
+  <button id="next-month" class="month-nav">&gt;</button>
 </div>
 	    <table>
           <thead>
