--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
  
 	  <div class="card calendar-grid">
 		  <div class="calendar-month">
-  <button id="prev-month" class="month-nav">&lt;</button>
+			   <button id="prev-day" class="day-nav">&lt;</button>
+  <button id="prev-month" class="month-nav">&lt;&lt;</button>
+  <button id="prev-day" class="day-nav">&lt;</button>
   <span id="calendar-month-label"></span>
-  <button id="next-month" class="month-nav">&gt;</button>
+  
+  <button id="next-month" class="month-nav">&gt;&gt;</button>
+			  <button id="next-day" class="day-nav">&gt;</button>
 </div>
 	    <table>
           <thead>
