--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
  
 	  <div class="card calendar-grid">
 		  <div class="calendar-month">
-  <button id="prev-month" class="month-nav">&lt;</button>
+  <button id="prev-month" class="month-nav">&laquo;</button>
+  <button id="prev-day" class="day-nav">&lsaquo;</button>
   <span id="calendar-month-label"></span>
-  <button id="next-month" class="month-nav">&gt;</button>
+  <button id="next-day" class="day-nav">&rsaquo;</button>
+  <button id="next-month" class="month-nav">&raquo;</button>
 </div>
 	    <table>
           <thead>
