--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
       
     </div>
   </div>
+  <div class="moon-row">
+    <div class="moon-col-75">The lunar phase description</div>
+    <div class="moon-col-25">KAPU</div>
+  </div>
+  <div class="moon-row2">
+    <div class="moon-col-50">Good For</div>
+    <div class="moon-col-50">Not Good for</div>
+  </div>
 
  
    
