--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
       <div class="current-date"></div>
       <div id="hawaiian-lunar-info"><em>Loading lunar information...</em></div>
       <div class="moon-phase"></div>
-  
+  <div class="astro-lines">
+   <div>
+    <span class="icon">🌙</span>Rise: <span id="moonrise-time">--:--</span> Set: <span id="moonset-time">--:--</span>
+  </div>
     <div> <span class="icon">☀️</span>Rise: <span id="sunrise-time">--:--</span> Set: <span id="sunset-time">--:--</span></div>
   
-  <div>
-    <span class="icon">🌙</span>Rise: <span id="moonrise-time">--:--</span> Set: <span id="moonset-time">--:--</span>
+ 
   </div>
 </div>
 
@@ -111,7 +113,7 @@
 
     <!-- Today Snapshot -->
     <div class="today-box">
-      <strong>Today</strong>
+     
       <div id="today-snapshot" class="today-snapshot"></div>
     </div>
 
